# github-actions-poetry

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
