[tool.poetry]
name = "github-actions-poetry"
version = "0.1.0"
description = "github actions poetry test"
authors = ["karimamunaff <karimamunaff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
